# rs-summer-2025-labs-Kasivvvv

geoapps/: pyproject.toml
geoapps/geoapps.egg-info/: PKG-INFO
geoapps/geoapps/lab03/: cloud_mosaic.py
notebooks/: lab-1.ipynb  lab-2.ipynb  lab-3-results.ipynb  lab-3.ipynb  lab-4.ipynb  lab-5.ipynb  lab-6.ipynb
notebooks/Data-lab-4/: s_d_566_2024.csv
